Thu Jul 30 02:08:33 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        These changes are part of minor API Modifications to
        compliant with DDS 1.2 specification.

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/HTemplate.pm:
        * bin/DCPS/IDLTemplate.pm:
        * dds/DCPS/BuiltInTopicUtils.h:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DomainParticipantFactoryImpl.h:
        * dds/DCPS/DomainParticipantFactoryImpl.cpp:
        * dds/DCPS/DomainParticipantImpl.h:
        * dds/DCPS/DomainParticipantImpl.cpp:
        * dds/DCPS/EntityImpl.h:
        * dds/DCPS/EntityImpl.cpp:
        * dds/DCPS/FailoverListener.h:
        * dds/DCPS/FailoverListener.cpp:
        * dds/DCPS/PublisherImpl.h:
        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/Qos_Helper.inl:
        * dds/DCPS/Registered_Data_Types.cpp:
        * dds/DCPS/RepoIdBuilder.inl:
        * dds/DCPS/RepoIdConverter.cpp:
        * dds/DCPS/Service_Participant.h:
        * dds/DCPS/Service_Participant.cpp:
        * dds/DCPS/StatusConditionImpl.h:
        * dds/DCPS/StatusConditionImpl.cpp:
        * dds/DCPS/SubscriberImpl.h:
        * dds/DCPS/SubscriberImpl.cpp:
        * dds/DCPS/TopicImpl.h:
        * dds/DCPS/TopicImpl.cpp:
        * dds/DCPS/WaitSet.cpp:
        * dds/DCPS/WriteDataContainer.cpp:
        * dds/DCPS/transport/framework/TransportImpl.cpp:
        * dds/DdsDcpsDataReaderRemote.idl:
        * dds/DdsDcpsDataWriterRemote.idl:
        * dds/DdsDcpsDomain.idl:
        * dds/DdsDcpsInfrastructure.idl:
        * dds/DdsDcpsPublication.idl:
        * dds/DdsDcpsSubscription.idl:
        * dds/DdsDcpsSubscriptionExt.idl:
        * dds/DdsDcpsTopic.idl:
        * dds/InfoRepo/DCPS_IR_Domain.cpp:
        * dds/InfoRepo/DomainParticipantListener_i.h:
        * dds/InfoRepo/DomainParticipantListener_i.cpp:
        * dds/InfoRepo/FederatorManagerImpl.cpp: