@@ -1,3 +1,10 @@
+Thu Jul 30 14:01:01 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>
+
+        * wrapper/OpenDDS/OpenDDS_Publication_Manager.cpp:
+        * wrapper/OpenDDS/OpenDDS_Subscription_Manager.cpp:
+        * wrapper/Topic_Manager_T.cpp:
+	    Added new StatusMask argument to create_*() calls.
+
 Thu Jul 30 02:08:33 UTC 2009  Yan Dai  <dai_y@ociweb.com>
 
         These changes are part of minor API Modifications to
